# QLogger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  baselogger_8h_source.html  class_q_logger_1_1_base_logger-members.html  class_q_logger_1_1_base_logger.html  class_q_logger_1_1_base_logger__inherit__graph.map  class_q_logger_1_1_base_logger__inherit__graph.md5  class_q_logger_1_1_log_entry-members.html  class_q_logger_1_1_log_entry.html  class_q_logger_1_1_log_formatter-members.html  class_q_logger_1_1_log_formatter.html  class_q_logger_1_1_q_logger_factory-members.html  class_q_logger_1_1_q_logger_factory.html  classes.html  dir_2ca4172e11b7bb6a0683316f7a76a178.html  dir_63cf287780dda5c03f76a9e1de519e53.html  dir_63cf287780dda5c03f76a9e1de519e53_dep.map  dir_63cf287780dda5c03f76a9e1de519e53_dep.md5  dir_98ae2e8babf26103afd9832b51683132.html  dir_98ae2e8babf26103afd9832b51683132_dep.map  dir_98ae2e8babf26103afd9832b51683132_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  (+6 more)
.github/workflows/: doxygen-gh-pages.yml
docs/examples/: callback-format.cpp
docs/fragments/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public-api.in
docs/themes/doxygen-awesome/: custom_header.html
qlogger/: CMakeLists.txt  config.h.in  qloggerfactory.cpp  qloggerfactory.h  qloggerglobal.h.in
qlogger/base/: baselogger.cpp  baselogger.h
qlogger/log/: logbinary.cpp  logbinary.h  logentry.cpp  logentry.h  logformatter.cpp  logformatter.h
qlogger/sinks/: filedailylogger.cpp  filedailylogger.h  filelogger.cpp  filelogger.h  filerotatinglogger.cpp  filerotatinglogger.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  typedefs_0.js
src/: CMakeLists.txt  qloggerfactory.cpp  qloggerfactory.h  qloggerglobal.h
src/base/: baselogger.cpp  baselogger.h
src/log/: logbinary.h  logentry.h  logformatter.cpp  logformatter.h
src/qlogger/: qloghandler.cpp  qloghandler.h  qlogmsg.cpp  qlogmsg.h
src/sinks/: filelogger.cpp  filelogger.h  filerotatinglogger.cpp  filerotatinglogger.h
